//
// Copyright 2015, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package lobby.registration;

option java_package="com.lobby.registration";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message Conference {

    ConferenceId conference_id = 1;

    // The conference locator access code.
    // Used by conference creator to view conference details.
    // Generated when the business customer creates the conference.
    string access_code = 2;

    string name = 3;

    string description = 4;

    // The part of the URL used to access the conference.
    // Consists of conferenceId + conferenceName (name is cut).
    string slug = 5;

    google.protobuf.Timestamp start_date = 6;

    google.protobuf.Timestamp end_date = 7;

    repeated SeatType seat_type = 8;
}

message ConferenceId {

    int64 value = 1;
}

message SeatType {

    SeatTypeId seat_type_id = 1;

    ConferenceId conference_id = 2;
}

message SeatTypeId {

    int32 value = 1;
}
